# ANPI-P2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
src/: divide-pol.h  formulaformat.h  laguerre.h  muller.h  stringUtils.h
